--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass --watch sass/vendor -o css --style compressed"
+    "sass": "node-sass --watch sass/vendor -o css --output-style compressed"
   },
   "repository": {
     "type": "git",
